# masters-degree

./: .gitmodules  CMakeLists.txt  README.md
c/c++/cnn_mul_matrix/: CMakeLists.txt  do_cmake.sh
c/c++/cnn_mul_matrix/tb/: conv_engine.c  eval_images_cwh_8_8_18.c  sat6_tb.c  weights.c
courses/HLS/queue/: CMakeLists.txt
courses/HLS/queue/bkp/src v1/: buffer.cpp  buffer.h  buffer_test.cpp
courses/HLS/queue/src/: buffer.cpp  buffer.h  buffer_test.cpp
geem/: CMakeLists.txt
geem/geem_hls/: .cproject  .project  .vivado_hls_log_all.xml  vivado_hls.app
geem/geem_hls/.apc/: autopilot.apfmapping
geem/geem_hls/solution1/: script.tcl  solution1.aps  solution1_data.json
geem/geem_hls/solution1/.autopilot/: .automg_exit  .autopilot_exit
geem/geem_hls/solution1/.autopilot/db/: .message_cosim.xml  .message_syn.xml  a.g  a.g.0.bc  a.g.1.bc  a.g.2.bc  a.g.2.prechk.bc  a.g.bc  a.o.1.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  a.pp.0.bc  a.pp.bc  autopilot.rtl.models.txt  bugpoint.sh  geem_pe.g.bc  geem_sa.bc  geem_sa.pragma.0.c  geem_sa.pragma.1.c  geem_sa.pragma.2.c  global.setting.tcl  hls_design_meta.cpp  hls_design_meta.h  sa.pp.0.cpp  sa_compute.adb  sa_compute.adb.annotation.xml  sa_compute.bind.adb  sa_compute.bind.adb.xml  sa_compute.compgen.tcl  sa_compute.constraint.tcl  sa_compute.design.xml  sa_compute.sched.adb  sa_compute.sched.adb.xml  sa_compute.tbgen.tcl  sa_compute.verbose.bind.rpt  sa_compute.verbose.bind.rpt.xml  sa_compute.verbose.rpt  sa_compute.verbose.rpt.xml  sa_compute.verbose.sched.rpt  (+2 more)
geem/geem_hls/solution1/.debug/: SA_top.protoinst  sa_top.protoinst
geem/geem_hls/solution1/impl/verilog/: SA_top.v  compute.v  sa_compute.v
geem/geem_hls/solution1/impl/vhdl/: SA_top.vhd  compute.vhd
geem/geem_hls/solution1/sim/: .autosim.status
geem/geem_hls/solution1/sim/autowrap/testbench/: .clang-tidy  geem_pe.c_pre.c  geem_sa.c_pre.c  geem_sa.c_pre.c.tb.c  geem_test.c_pre.c  geem_test.c_pre.c.tb.c  pe.cpp_pre.cpp  pe.cpp_pre.cpp.tb.cpp  sa.cpp_pre.cpp  sa.cpp_pre.cpp.tb.cpp  sa_test.cpp_pre.cpp  sa_test.cpp_pre.cpp.tb.cpp
geem/geem_hls/solution1/sim/report/: SA_top_cosim.rpt
geem/geem_hls/solution1/sim/verilog/: AESL_automem_sa_ba_sa.v  AESL_automem_sa_buffer_a_li_value.v  AESL_automem_sa_buffer_b_tw_value.v  AESL_automem_sa_pe_ba.v  AESL_automem_sa_pe_li.v  AESL_automem_sa_pe_ri.v  run_xsim.sh  sa_compute.autotb.v  sa_compute.performance.result.transaction.xml  sa_compute.prj  sa_compute.protoinst  sa_compute.tcl  sa_compute.wcfg  sa_compute.wdb  vivado_pid13121.str  vivado_pid1401892.str  webtalk.jou  xsim.jou
geem/geem_hls/solution1/sim/wrapc/: apatb_sa_compute.cpp  apatb_sa_compute.h  cosim.tv.mk  geem_test.c_pre.c.tb.c
geem/geem_hls/solution1/sim/wrapc_pc/: cosim.pc.mk
geem/geem_hls/solution1/syn/report/: csynth.xml  sa_compute_csynth.rpt  sa_compute_csynth.xml
geem/geem_hls/solution1/syn/systemc/: sa_compute.cpp  sa_compute.h
geem/geem_hls/solution1/syn/verilog/: sa_compute.v
geem/geem_hls/solution1/syn/vhdl/: sa_compute.vhd
geem/src/: geem_pe.c  geem_pe.h  geem_sa.c  geem_sa.h  geem_test.c  pe.cpp  pe.h  sa.cpp  sa.h  sa_test.cpp
loop_de_for/: CMakeLists.txt
loop_de_for/src/: loop_de_for.c  loop_de_for.h  loop_de_for_test.c
ulisa/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sa_tb
ulisa/bkp/sa/hls/sa/: .cproject  .project
ulisa/bkp/sa/hls/sa/.apc/: autopilot.apfmapping
ulisa/bkp/sa/hls2023/sa/: .cproject  .project  .vitis_hls_log_all.xml
ulisa/bkp/sa/hls2023/sa/.apc/: autopilot.apfmapping
ulisa/bkp/sa/hls2023/sa/z020/: z020.aps  z020_data.json
ulisa/bkp/sa_v0/: do_cmake.sh
ulisa/bkp/sa_v0/hls/sa/z020/: script.tcl
ulisa/bkp/sa_v0/hls2023/sa/z020/: script.tcl
ulisa/bkp/sa_v0/sa/: sa_test.cpp
ulisa/bkp/sa_v1/: readme.md
ulisa/bkp/sa_v2/: readme.md  sa.cpp  sa.h  sa_test.cpp
ulisa/bkp/sa_v3/: readme.md  sa.h
ulisa/bkp/sa_v4/: pe.h  readme.md  sa.cpp  sa.h  sa_test.cpp
ulisa/bkp/sa_v5/: sa.cpp  sa_test.cpp
ulisa/hls/sa/: .vivado_hls_log_all.xml  vivado_hls.app
ulisa/hls/sa/z020/: sdx.tcl  z020.aps  z020_data.json
ulisa/hls/sa/z020/.autopilot/: .automg_exit
ulisa/hls/sa/z020/.autopilot/db/: __ctype_info__.xml  a.g  a.g.0.bc  a.g.2.prechk.bc  a.o.2.bc  autopilot.rtl.models.txt  bugpoint.sh  pe.bind.adb  pe.bind.adb.xml  pe.compgen.tcl  pe.design.xml  pe.protoinst  pe.rtl_wrap.cfg.tcl  pe.sched.adb  pe.sched.adb.xml  pe.tbgen.tcl  pe.verbose.sched.rpt.xml  pe_dataflow_ana.wcfg  sa.pragma.2.cpp  useless.bc
ulisa/hls/sa/z020/impl/ip/: run_ippack.tcl
ulisa/hls/sa/z020/impl/vhdl/: pe.vhd  pe_mul_8s_8s_16_1_1.vhd
ulisa/hls/sa/z020/sim/wrapc/: cosim.tv.mk  sa_test.cpp_pre.cpp.tb.cpp
ulisa/hls/sa/z020/sim/wrapc_pc/: apatb_pe.cpp
ulisa/hls/sa/z020/syn/report/: csynth.xml  pe_csynth.rpt
ulisa/hls/sa/z020/syn/systemc/: pe.h  pe_mul_8s_8s_16_1_1.h
ulisa/hls2023/sa/: hls.app
ulisa/hls2023/sa/z020/: z020.directive
ulisa/hls2023/sa/z020/.autopilot/: .autopilot_exit
ulisa/hls2023/sa/z020/.autopilot/db/: .message_impl.xml  a.g.2.prechk.bc  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.5.gdce.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  a.pp.bc  clang.diag.xml  cmplx.3.003.fe.inline-raw.json  cmplx.3.010.fe.performance-prep.json  cmplx.3.011.fe.performance-parallel.json  cmplx.3.015.fe.lowering.json  cmplx.3.016.fe.opt.json  dut.hcp  pe.DependenceCheck.tcl  pe.bind.adb  pe.compgen.dataonly.tcl  sa.g.bc  (+9 more)
ulisa/sa/: pe.cpp  pe.h  readme.md  sa.cpp  sa.h  sa_test.cpp
ulisa/sa_v1/: sa_test.cpp
ulisa/sa_v2/: arq.txt
(+2334 files in other folders)
